Fix bug 109463.  IE will fire onclick() on submit buttons when submitting form via enter in text field.  We should do the same. r=rods,jkeiser,rjesup@wgate.com.  sr=jst